// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectionController changeCardSelection when the control arg equal to false should update the select state of the item 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [
      1,
    ],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": true,
      "key": 1,
    },
  ],
}
`;

exports[`SelectionController changeCardSelection when the control arg equal to true should update the select state of the item 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": false,
      "key": 1,
    },
  ],
}
`;

exports[`SelectionController deselectCards should deselect item 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": false,
      "key": 1,
    },
  ],
}
`;

exports[`SelectionController deselectCardsByIndexes should deselect item 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": false,
      "key": 1,
    },
  ],
}
`;

exports[`SelectionController selectCards should select item 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [
      1,
    ],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": true,
      "key": 1,
    },
  ],
}
`;

exports[`SelectionController selectCardsByIndexes should select item 1`] = `
InterruptableComputed {
  "callbacks": Set {},
  "depInitialized": [
    true,
    true,
    true,
    true,
  ],
  "depValues": [
    [
      {
        "id": 1,
        "value": "test",
      },
    ],
    [
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Id",
        "dataField": "id",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "id",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 0,
      },
      {
        "alignment": "left",
        "allowFiltering": true,
        "allowHeaderFiltering": false,
        "allowHiding": true,
        "allowReordering": true,
        "allowSearch": true,
        "allowSorting": true,
        "calculateCellValue": [Function],
        "calculateDisplayValue": [Function],
        "calculateFilterExpression": [Function],
        "caption": "Value",
        "dataField": "value",
        "dataType": "string",
        "falseText": "false",
        "headerFilter": {
          "allowSelectAll": true,
          "height": 325,
          "search": {
            "editorOptions": {},
            "enabled": false,
            "mode": "contains",
            "timeout": 500,
          },
          "width": 252,
        },
        "headerItemTemplate": undefined,
        "name": "value",
        "showInColumnChooser": true,
        "trueText": "true",
        "visible": true,
        "visibleIndex": 1,
      },
    ],
    [
      1,
    ],
    {
      "caseSensitive": false,
      "enabled": true,
      "searchStr": "",
    },
  ],
  "isInitialized": true,
  "subscriptions": SubscriptionBag {
    "subscriptions": [
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
      {
        "unsubscribe": [Function],
      },
    ],
  },
  "value": [
    {
      "cells": [
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Id",
            "dataField": "id",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "id",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 0,
          },
          "displayValue": 1,
          "highlightedText": null,
          "text": "1",
          "value": 1,
        },
        {
          "column": {
            "alignment": "left",
            "allowFiltering": true,
            "allowHeaderFiltering": false,
            "allowHiding": true,
            "allowReordering": true,
            "allowSearch": true,
            "allowSorting": true,
            "calculateCellValue": [Function],
            "calculateDisplayValue": [Function],
            "calculateFilterExpression": [Function],
            "caption": "Value",
            "dataField": "value",
            "dataType": "string",
            "falseText": "false",
            "headerFilter": {
              "allowSelectAll": true,
              "height": 325,
              "search": {
                "editorOptions": {},
                "enabled": false,
                "mode": "contains",
                "timeout": 500,
              },
              "width": 252,
            },
            "headerItemTemplate": undefined,
            "name": "value",
            "showInColumnChooser": true,
            "trueText": "true",
            "visible": true,
            "visibleIndex": 1,
          },
          "displayValue": "test",
          "highlightedText": null,
          "text": "test",
          "value": "test",
        },
      ],
      "data": {
        "id": 1,
        "value": "test",
      },
      "index": 0,
      "isSelected": true,
      "key": 1,
    },
  ],
}
`;
